# allauth-keycloak-ext

./: .gitignore  ChangeLog.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
allauth_keycloak_ext/: __init__.py  provider.py  tests.py  urls.py  views.py
keycloak_ext/: provider.py  tests.py  urls.py  views.py
